add/re-add vuetify

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,4 @@
 // Globals
 $body-font-family: 'Noto Sans', sans-serif !default;
 $font-size-root: 18px !default;
-$code-color: #00FF00 !default;
+$code-color: inherit !default;
