Add more docs and styling, but break scrolling

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,5 @@
 // Globals
 $body-font-family: 'Noto Sans', sans-serif !default;
-$font-size-root: 18px !default;
+$font-size-root: 16px !default;
 $code-color: inherit !default;
+$code-kbd-font-size: 90% !default;
